--- a/client/src/components/sidebar/Sidebar.css
+++ b/client/src/components/sidebar/Sidebar.css
@@ -1,11 +1,10 @@
-/* Sidebar.css */
 .sidebar {
     position: fixed;
     top: 0;
     left: 0;
-    width: 250px; /* Adjust the width as needed */
-    height: 100vh; /* Full screen height */
-    background-color: #f8f9fa; /* Background color */
+    width: 250px; 
+    height: 100vh; 
+    background-color: #f8f9fa; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -23,7 +22,7 @@
 }
 
 .sidebar nav {
-    flex: 1; /* Allow nav to take available space */
+    flex: 1; 
     display: flex;
     flex-direction: column;
     gap: 15px;
