--- a/client/src/components/calendar/Calendar.css
+++ b/client/src/components/calendar/Calendar.css
@@ -6,7 +6,7 @@
     border: 1px solid #ddd;
     font-family: Arial, sans-serif;
     padding: 10px;
-    margin-left: 400px;
+    /* margin-left: 400px; */
   }
   
   .react-calendar__navigation {
