--- a/client/src/components/projects/Projects.css
+++ b/client/src/components/projects/Projects.css
@@ -10,7 +10,7 @@
   .projects-list {
     display: flex;
     flex-direction: column;
-    gap: 30px; /* Space between cards */
+    gap: 30px; 
     margin-top: 20px;
   }
   
@@ -19,14 +19,14 @@
     background: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+    /* transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease; */
     padding: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
     border-left: 8px solid transparent;
-    position: relative;
+    /* position: relative; */
     overflow: hidden;
   }
   
@@ -45,7 +45,7 @@
   }
   
   .project-header h2 {
-    font-size: 1.1rem; /* Smaller title font */
+    font-size: 1.1rem; 
     font-weight: 600;
     color: #333;
     margin: 0;
@@ -56,20 +56,20 @@
     font-size: 0.85rem;
     font-weight: 500;
     text-transform: capitalize;
-    border-radius: 25px; /* More rounded for a modern pill shape */
+    border-radius: 25px; 
     color: #fff;
     background-color: #28a745;
     display: inline-block;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    /* transition: background-color 0.3s ease, transform 0.3s ease; */
   }
   
   .project-status.private {
-    background-color: #dc3545; /* Strong contrast for private status */
+    background-color: #dc3545; 
   }
   
   .project-status:hover {
-    background-color: #218838; /* Slightly darker for hover effect */
-    transform: scale(1.05); /* Slight zoom effect on hover */
+    background-color: #218838; 
+    transform: scale(1.05); 
   }
   
   
@@ -93,6 +93,7 @@
   .project-details strong {
     font-weight: 600;
     color: #333;
+    margin-left: 500px;
   }
   
   .project-details span {
