--- a/client/src/components/topbar/Topbar.css
+++ b/client/src/components/topbar/Topbar.css
@@ -106,6 +106,8 @@
   border-radius: 8px;
   width: 400px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  margin: auto;
 }
 
 .input-group {
