--- a/client/src/components/user/Forms.css
+++ b/client/src/components/user/Forms.css
@@ -1,14 +1,22 @@
 
+.l1-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f8f9fa;
+}
 .form-container {
   width: 100%;
   max-width: 400px;
-  margin: 50px auto;
+  /* margin-top: 50px; */
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #ffffff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  margin-left: 500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h2 {
