--- a/client/src/components/tasks/Tasks.css
+++ b/client/src/components/tasks/Tasks.css
@@ -89,3 +89,10 @@
     gap: 5px;
   }
   
+  .project-title {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
+  }
