--- a/client/src/components/calendar/Calendar.css
+++ b/client/src/components/calendar/Calendar.css
@@ -68,7 +68,7 @@
 .event-dot {
   width: 8px;
   height: 8px;
-  background-color: #4caf50;
+  background-color: red;
   border-radius: 50%;
   margin: auto;
   margin-top: 5px;
